# rpi3

./: .gitignore  CMakeLists.txt  README.md  copy-to-rpi.sh
service/: test-arm.service
test-arm/: CMakeLists.txt
test-arm/src/: main.cpp  sketch.cpp  sketch.h  tasks.cpp  tasks.h
wiringPi/: CMakeLists.txt
wiringPi/src/: wiringPi.c  wpiExtensions.c
